apollo/resources/parser/quality.peg
grammar QC

qc <- concat+
concat <- sum (ws* "|" ws* sum)*
sum <- product (ws* ("+" / "-") ws* product)*
product <- exponent (ws* ("*" / "/") ws* exponent)*
exponent <- value (ws* "^" ws* value)*
value <- null / factor
factor <- number / variable / lookup / "(" ws* sum ws* ")"
null <- "NULL"
lookup <- "$" ("location" / "participant") ("." / "@") name
name <- [a-zA-Z_] [a-zA-Z0-9_]*
variable <- [A-Z]+
number <- ("-" / "+")? [0-9]+ ("." [0-9]*)? %extract_number
ws <- [' '\t\r\n]
